--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,8 @@ body {
 .front_wrap {
     display: flex;
     width: 100%;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 6%;
+    padding-right: 6%;
     max-width: 2000px;
     align-self: center;
     flex-wrap: wrap;
@@ -142,7 +142,7 @@ body {
 
 .front img {
     width: 540px;
-    align-self: center;
+    margin-left: auto;
 }
 
 .front h1{
@@ -597,6 +597,11 @@ select:focus{
     .about {
         margin: 0px;
     }
+    .front_wrap {
+        padding-top: 0px;
+        padding-left: 3%;
+        padding-right: 3%;
+    }
    
     .about_content {
         width: 100%;
@@ -625,14 +630,23 @@ select:focus{
 
 
 
-@media (max-width: 950px) {
+@media (max-width: 1150px) {
     /*FOOTER*/
-    .front_wrap {
-        padding: 0px 50px;
-    }
 
-    .front img{
-        margin-left: 100px;
+    .front {
+        flex-basis: 100%;
+        padding: 0px;
+        text-align: center;
+    }
+    .front a {
+        align-self: center;
+    }
+    .front img {
+        height: auto;
+        width: 100%;
+        min-width: 200px;
+        max-width: 600px;
+        margin: auto;
     }
 
     .item{
@@ -671,7 +685,7 @@ select:focus{
     .about_container{
         width: 100%;
         flex-direction: column;
-        margin: 100px 0px;
+        margin: 5% 0px;
         padding: 0px 40px;
     }
     .about_content {
@@ -694,6 +708,18 @@ select:focus{
     }
     .about-img img {
         width: 100%;
+    }
+
+    /*Misc*/
+    .line-second {
+        margin: 5% auto;
+    }
+    .error-content {
+        padding-left: 3%;
+        padding-right: 3%;
+    }
+    .error-btn a {
+        font-size: 13px;
     }
 }
 
@@ -725,16 +751,13 @@ select:focus{
         background: rgba(0,0,0,0.6);
         position: absolute;
         width: 100%;
-        height: 17%;
         transform-origin: top;
     }
 
 
     .navbar ul li {
         display: block;
-        margin-right: 50px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 10px auto;
     }
 
     .navbar ul li a{
@@ -770,25 +793,24 @@ select:focus{
 @media (max-width: 600px){
     .navbar ul {
         width: 100%;
-        height: 17%;
+        
     }
     .line {
         text-align: center;
-    }
-    .front_wrap {
-        
-        padding: 0px 50px;
-        
     }
     .front {
         flex-basis: 100%;
         padding: 0px;
     }
-    .front img {
-        margin-left: 0px
-    }
+   
     .people,.item{
         flex-basis: 100%;
+    }
+
+    .front img {
+        height: auto;
+        width: 100%;
+        min-width: 200px;
     }
 
 }
